udemy/ingress/example/1-deployment-httpd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  namespace: externaldns
  labels:
    app: apache
  annotations:
    doc: "Annotations de ejemplo 1"
    adjunto: "Ejemplo de annotations 2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd
