udemy/ingress/example/3-service-httpd.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apache
  name: apache
  namespace: externaldns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: svc1.externaldns.com
    external-dns.alpha.kubernetes.io/ttl: "30"
    alb.ingress.kubernetes.io/scheme: internal
spec:
  #type: NodePort
  #type: ClusterIP
  type: LoadBalancer
  selector:
    app: apache
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
