udemy/ingress/example/4-service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: externaldns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: svc2.externaldns.com
    external-dns.alpha.kubernetes.io/ttl: "30"
    alb.ingress.kubernetes.io/scheme: internal
spec:
  #type: NodePort
  #type: ClusterIP
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
