udemy/ingress/example/service-apache.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apache
  name: apache
  namespace: udemy
spec:
  type: NodePort
  selector:
    app: apache
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
